--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,6 +12,7 @@ $success-dark:       #00966D !default;
 $warning:       #F4B740 !default;
 $error:         #ED2E7E !default;
 $error-light:         #FF83B7 !default;
+$error-lighter: #ffabcd !default;
 $error-dark:         #C30052 !default;
 $gradient-primary: linear-gradient(114.44deg, #7433FF 0%, #FFA3FD 100%);
 
@@ -30,6 +31,9 @@ $grid-gutter-width:0;
 
 $h1-font-size: 18px;
 $headings-font-weight: 700;
+
+$modal-fade-transform: scale(0.5);
+$modal-transition: transform .1s ease-out !default;
 
 .bg-gradient-primary{
   background: $gradient-primary;
@@ -69,5 +73,14 @@ input[type=text].form-control {
     border-radius: 40px;
     padding: 7px 20px;
     text-align: center;
+  }
+}
+.modal-dialog {
+  .modal-content {
+    border-radius: 35px;
+    .modal-header {
+      padding: 25px 25px 10px 25px;
+      border: none;
+    }
   }
 }
