--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -115,3 +115,12 @@ input[type=text].form-control {
     }
   }
 }
+
+.warning {
+  font-size: 14px;
+  line-height: 24px;
+  border-radius: 40px;
+  padding: 7px 20px;
+  text-align: center;
+}
+
