--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,7 @@ $container-padding-x: 0;
 $header-height: 85px;
 
 $primary: #5f2eea !default;
+$primary-dark: #401fa0 !default;
 $primary-light: #bea9fc !default;
 $secondary:     #1CC8EE !default;
 $success:       #00BA88 !default;
